Fixed spacing on detail page

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ p {
     line-height: 1.5;
 }
 
+.data {
+  padding-bottom: 75px;
+}
+
 @media(min-width:768px) {
     p {
         margin: 0 0 35px;
